--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title style="color:blue">AtillaBosma's website</title>
 </head>
 
 <body>
