--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title style="color:blue">AtillaBosma's website</title>
+  <title>AtillaBosma's website</title>
 </head>
 
 <body>
-  <h1>This is a Heading</h1>
+  <h1 style="color:blue">This is a Heading</h1>
   <p>This is a paragraph.</p>
 </body>
 
