--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AtillaBosma's website</title>
+  <script type="text/javascript" src="simplemethods.js"></script>
 </head>
-
-<body>
-  <h1 style="color:red">This is a Heading</h1>
-  <p>This is a paragraph.</p>
-</body>
-
 </html>
