--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript" src="simplemethods.js"></script>
+  <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
 </html>
