--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<body>
+  <p id="test">Test</p>
+</body>
 <head>
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
