--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
   <p id="test">Test</p>
+  <button onclick = "upgradeGoldGain()">Upgrade Gold Gain</button>
 </body>
 <head>
   <script type="text/javascript" src="scripts/testscript.js"></script>
