--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <style>
   gold{
     position: absolute;
-    left: 10px;
     right: 10px;
   }
   
   goldGain{
     position: absolute;
-    left: 10px;
-    right: 50px;
+    right: 200px;
+  }
+  
+  upgradeButton{
+    position: absolute;
+    left: 0px;
+    top: -100px;
   }
 </style>
   <script type="text/javascript" src="scripts/testscript.js"></script>
@@ -20,7 +24,7 @@
 <body>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
-  <button onclick = "upgradeGoldGain()">Upgrade Gold Gain</button>
+  <upgradeButton onclick = "upgradeGoldGain()">Upgrade Gold Gain</upgradeButton>
 </body>
 
 </html>
