--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <style>
   gold{
     position: absolute;
+    left: 10px;
     right: 10px;
   }
   
   goldGain{
     position: absolute;
+    left: 10px;
     right: 200px;
   }
   
   upgradeButton{
     position: absolute;
     left: 0px;
+    right: 10px;
     top: -100px;
   }
 </style>
