--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
     left: 10px;
     right: 200px;
   }
-  
-  upgradeButton{
-    position: absolute;
-    left: 0px;
-    right: 10px;
-    top: -100px;
-  }
 </style>
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
@@ -27,7 +20,7 @@
 <body>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
-  <upgradeButton onclick = "upgradeGoldGain()">Upgrade Gold Gain</upgradeButton>
+  <button onclick = "upgradeGoldGain()">Upgrade Gold Gain</button>
 </body>
 
 </html>
