--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
@@ -7,7 +9,7 @@
 <body>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
-  <button onclick = "upgradeGoldGain()">Upgrade Gold Gain</button>
+  <upgradeGoldGain id="upgradeGoldGain">Upgrade Gold Gain</upgradeGoldGain>
 </body>
 
 </html>
