--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
+  <upgradeGoldGain>Upgrade Gold Gain</upgradeGoldGain>
   <upgradeGoldGain id="upgradeGoldGain">Upgrade Gold Gain</upgradeGoldGain>
 </body>
 
