--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <upgradeGoldGain id="upgradeGoldGain">Upgrade Gold Gain</upgradeGoldGain>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
+  <upgradeGoldGainSpeed id="upgradeGoldGainSpeed">Upgrade Gold Gain Speed</upgradeGoldGainSpeed>
 <head>
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
