--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <body>
   <upgradeGoldGain id="upgradeGoldGain">Upgrade Gold Gain</upgradeGoldGain>
+  <upgradeGoldGainCost id="upgradeGoldGainCost">Cost</upgradeGoldGainCost>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
 <head>
