--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 
 <body>
+  <upgradeGoldGainCostText id="upgradeGoldGainCostText">upgradeGoldGainCostText</upgradeGoldGainCostText>
+  <foodText id="foodText">Food</foodText>
   <upgradeGoldGain id="upgradeGoldGain">Upgrade Gold Gain</upgradeGoldGain>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
