--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <upgradeGoldGainCostText id="upgradeGoldGainCostText">upgradeGoldGainCostText</upgradeGoldGainCostText>
   <foodText id="foodText">Food</foodText>
-  <upgradeGoldGain id="upgradeGoldGain">Upgrade Gold Gain</upgradeGoldGain>
+  <upgradeGoldGain id="upgradeGoldGain">Hire Miner</upgradeGoldGain>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
 <head>
