--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <upgradeGoldGainCostText id="upgradeGoldGainCostText">upgradeGoldGainCostText</upgradeGoldGainCostText>
   <foodText id="foodText">Food</foodText>
   <upgradeGoldGain id="upgradeGoldGain">Hire Miner</upgradeGoldGain>
+  <miners id="minersText">minersText</miners>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
 <head>
