--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <body>
   <upgradeGoldGainCostText id="upgradeGoldGainCostText">upgradeGoldGainCostText</upgradeGoldGainCostText>
+  <farmsText id="farmsText">farmsText</farmsText>
+  <minersFoodGain id="minersFoodGain">minersFoodGain</minersFoodGain>
   <foodText id="foodText">Food</foodText>
   <upgradeGoldGain id="upgradeGoldGain">Hire Miner</upgradeGoldGain>
   <miners id="minersText">minersText</miners>
