--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <minersFoodGain id="minersFoodGain">minersFoodGain</minersFoodGain>
   <foodText id="foodText">Food</foodText>
   <upgradeGoldGain id="upgradeGoldGain">Hire Miner</upgradeGoldGain>
+  <buildFarm id="buildFarm">Build Farm</buildFarm>
   <miners id="minersText">minersText</miners>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
