--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
   <miners id="minersText">minersText</miners>
   <gold id="goldText">Gold</gold>
   <goldGain id="goldGainText">Gold</gold>
+  
 <head>
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
+
+<form>
+<input type="button" onClick="parent.location='https://github.com/AtillaBosma/atillabosma.github.io'">
+</form>
+
 </body>
 
 </html>
