--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
 
-<form>
-<input type="button" onClick="parent.location='https://github.com/AtillaBosma/atillabosma.github.io'">
+<form method="link" ACTION="https://github.com/AtillaBosma/atillabosma.github.io">
+<input type="submit" value="Github">
 </form>
 
 </body>
