--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
 
-<form method="link" ACTION="https://github.com/AtillaBosma/atillabosma.github.io">
-<input type="submit" value="Github">
+<form method="link" action="https://github.com/AtillaBosma/atillabosma.github.io" id="githubButton">
+  <input type="submit" value="Github">
 </form>
 
 </body>
