--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
 
-<form method="link" action="https://github.com/AtillaBosma/atillabosma.github.io" id="githubButton">
-  <input type="submit" value="Github">
-</form>
+<githubButton type="button" id="githubButton">Github</githubButton>
 
 </body>
 
