--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
 
-<githubButton type="button" id="githubButton">Github</githubButton>
+<input type="button" src="images/gitbuttonUp.png" 
+width="400" height="400" value="Github"
+onmousedown="$(this).css({'background-image': 'images/gitbuttonDown.png'});"
+onmouseup="$(this).css({'background-image': 'images/gitbuttonUp.png'});">
 
 </body>
 
