--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
 
-<input type="button" src="images/gitbuttonUp.png" 
-width="400" height="400" value="Github"
-onmousedown="$(this).css({'background-image': 'images/gitbuttonDown.png'});"
-onmouseup="$(this).css({'background-image': 'images/gitbuttonUp.png'});">
+<a href="JavaScript:githubButtonFunction()" id="githubButton"><img src="images\gitbuttonUp.png"></a>
 
 </body>
 
