--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
 
-<a href="JavaScript:githubButtonFunction()" id="githubButton"><img src="images\gitbuttonUp.png"></a>
+<img src="images\githubUp" id="githubButton">
 
 </body>
 
