--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 
 <body>
+  <githubbutton onmousedown="githubButtonFunction" border="0" src="images\gitbuttonUp.png" alt="gitbuttonUp" width="200px" height="200px" bottom="100px" right="10px" position="absolute"></githubbutton>
   <upgradeGoldGainCostText id="upgradeGoldGainCostText">upgradeGoldGainCostText</upgradeGoldGainCostText>
   <farmsText id="farmsText">farmsText</farmsText>
   <minersFoodGain id="minersFoodGain">minersFoodGain</minersFoodGain>
@@ -17,8 +18,6 @@
 <head>
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
-
-<img src="images\githubUp" id="githubButton">
 
 </body>
 
