--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <body>
-  <githubbutton id="githubButton" onmousedown="githubButtonFunction" border="0" src="images\gitbuttonUp.png" alt="gitbuttonUp"></githubbutton>
+  <githubbutton id="githubButton" border="0"></githubbutton>
   <upgradeGoldGainCostText id="upgradeGoldGainCostText">upgradeGoldGainCostText</upgradeGoldGainCostText>
   <farmsText id="farmsText">farmsText</farmsText>
   <minersFoodGain id="minersFoodGain">minersFoodGain</minersFoodGain>
