add buildfarm cost text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <githubbutton id="githubButton" border="0"></githubbutton>
   <upgradeGoldGainCostText id="upgradeGoldGainCostText">upgradeGoldGainCostText</upgradeGoldGainCostText>
+  <buildFarmCostText id="buildFarmCostText">buildFarmCostText</buildFarmCostText>
   <farmsText id="farmsText">farmsText</farmsText>
   <minersFoodGain id="minersFoodGain">minersFoodGain</minersFoodGain>
   <foodText id="foodText">Food</foodText>
