--- a/contact/index.html
+++ b/contact/index.html
@@ -17,5 +17,14 @@
 
 <body>
   <script src="scripts/contactscript.js"></script>
+  <a class="twitter-follow-button"
+  href="https://twitter.com/Atilla_Bosma"
+  data-show-count="false"
+  data-lang="en">
+Follow @Atilla_Bosma
+</a>
+<script>
+	window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return t;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));
+</script>
 </body>
 </html>
