--- a/contact/index.html
+++ b/contact/index.html
@@ -16,10 +16,13 @@
 </head>
 
 <body>
-  <script src="scripts/contactscript.js"></script>
-<twitter class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets by @Atilla_Bosma</twitter>
+<a class="twitter-timeline"
+  href="https://twitter.com/Atilla_Bosma"
+  data-widget-id="587032631709163520">
+  Tweets by @Atilla_Bosma
+</a>
 <script>
-	!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+	window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return t;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));
 </script>
 </body>
 </html>
