--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <style>
+  body {
+    background-color: #d0e4fe;
+  }
+
+  h1 {
+    color: orange;
+    text-align: center;
+  }
+
+  p {
+    font-family: "Times New Roman";
+    font-size: 20px;
+  }
+  </style>
 </head>
 
 <body>
