--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <![endif]-->
   <style>
   body {
-    background-color: #d0e4fe;
+    background-color: #FFA9A9;
   }
 
   h1 {
@@ -24,13 +24,15 @@
   }
 
   p {
-    font-family: "Times New Roman";
+    font-family: "Comic Sans";
     font-size: 20px;
   }
   </style>
 </head>
 
 <body>
+<h1>lololololo</h1>
+<p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
 </body>
 </html>
