--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <![endif]-->
   <style>
   body {
-    background-color: #FFA9A9;
+    background-image: url("http://static.giantbomb.com/uploads/original/18/184345/2502324-draven5kb5k.png.png");
+    background-repeat: repeat;
   }
 
   h1 {
