--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <style>
   body {
     background-image: url("http://static.giantbomb.com/uploads/original/18/184345/2502324-draven5kb5k.png.png");
+    background-size: 80px 60px;
     background-repeat: repeat;
   }
 
