--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
   }
 
   h1 {
-    color: orange;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     text-align: center;
   }
 
   p {
     font-family: "Comic Sans";
-    font-size: 20px;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
   </style>
 </head>
