--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 
   h1 {
     color: white;
-    -webkit-text-stroke: 5px black;
+    -webkit-text-stroke: 2px black;
     text-align: center;
   }
 
   p {
     font-family: "Comic Sans";
     color: white;
-    -webkit-text-stroke: 5px black;
+    -webkit-text-stroke: 2px black;
   }
   </style>
 </head>
 
 <body>
-<h1>lololololo</h1>
+<h1>Whalecum to my site lololo</h1>
 <p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
 </body>
