--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     color: white;
     -webkit-text-stroke: 1px black;
     text-align: center;
+    font-size: 50px;
   }
 
   p {
     font-family: "Comic Sans";
     color: white;
     -webkit-text-stroke: 1px black;
+    font-size: 20px;
   }
   </style>
 </head>
