--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   h1 {
     color: white;
-    -webkit-text-stroke: 1px black;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     text-align: center;
     font-size: 50px;
   }
@@ -30,7 +30,7 @@
   p {
     font-family: "Comic Sans";
     color: white;
-    -webkit-text-stroke: 1px black;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-size: 20px;
   }
   </style>
