--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 <h1>Whalecum to my site lololo</h1>
 <p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
+<script src='//redditjs.com/subreddit.js' data-subreddit='leagueoflegends'></script>
 </body>
 </html>
