--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-size: 20px;
   }
+  
+  a {
+    position: fixed;
+    left: 20px;
+    top: 50px;
+  }
   </style>
 </head>
 
