--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-size: 20px;
   }
+  
+  twitter {
+    top: 50px;
+  }
   </style>
 </head>
 
@@ -41,8 +45,8 @@
 <p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
 <script src='//redditjs.com/subreddit.js' data-subreddit='leagueoflegends' data-width='500'></script>
-<a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
+<div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
+</div>
 </body>
 </html>
