--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     position: absolute;
     top: 50px;
   }
+  
+  #reddit {
+    position: absolute;
+    top: 50px;
+    left: 200px;
+  }
   </style>
 </head>
 
@@ -45,9 +51,12 @@
 <h1>Whalecum to my site lololo</h1>
 <p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
-<script src='//redditjs.com/subreddit.js' data-subreddit='leagueoflegends' data-width='500'></script>
+
+<div id="reddit"><script src='//redditjs.com/subreddit.js' data-subreddit='leagueoflegends' data-width='500'></script></div>
+
 <div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
+
 </body>
 </html>
