--- a/index.html
+++ b/index.html
@@ -44,11 +44,23 @@
     top: 200px;
     left: 200px;
   }
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
   </style>
 </head>
 
 <body>
 <h1>Whalecum to my site lololo</h1>
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
 <p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
 
