--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
     left: 200px;
   }
   
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  li {
+    float: left;
+  }
+
+  a {
+    display: block;
+    width: 60px;
   }
   </style>
 </head>
@@ -56,10 +59,10 @@
 <body>
 <h1>Whalecum to my site lololo</h1>
 <ul>
-  <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
 </ul>
 <p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
