--- a/index.html
+++ b/index.html
@@ -60,11 +60,8 @@
 <h1>Whalecum to my site lololo</h1>
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#game">Game</a></li>
 </ul>
-<p>for game go to tillybosma.space/game</p>
 <script src="scripts/twitterscript.js"></script>
 
 <div id="reddit"><script src='//redditjs.com/subreddit.js' data-subreddit='leagueoflegends' data-width='500'></script></div>
