--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h1>Whalecum to my site lololo</h1>
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#game">Game</a></li>
+  <li><a href="game/">Game</a></li>
 </ul>
 <script src="scripts/twitterscript.js"></script>
 
