--- a/game/index.html
+++ b/game/index.html
@@ -14,8 +14,9 @@
   <buildFarm id="buildFarm">Build Farm</buildFarm>
   <miners id="minersText">minersText</miners>
   <gold id="goldText">Gold</gold>
-  <goldGain id="goldGainText">Gold</gold>
-  
+  <goldGain id="goldGainText">Gold</goldGain>
+  <wood id="woodText">Wood</wood>
+  <woodGain id="woodGainText">Wood</woodGain>
 <head>
   <script type="text/javascript" src="scripts/testscript.js"></script>
 </head>
