--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     top: 200px;
   }
   
+  #twitch {
+    position: absolute;
+    top: 200px;
+  }
+  
   #reddit {
     position: absolute;
     top: 200px;
@@ -56,6 +61,9 @@
 <div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
+
+<twitch class="embedly-card" href="http://twitch.tv/atillabosma">AtillaBosma - Twitch</twitch>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 
 </body>
 </html>
