--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   #twitch {
     position: absolute;
     top: 200px;
+    left: 400px;
   }
   
   #reddit {
@@ -62,8 +63,8 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 
-<twitch class="embedly-card" href="http://twitch.tv/atillabosma">AtillaBosma - Twitch</twitch>
-<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+<iframe src="http://www.twitch.tv/atillabosma/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+<twitch href="http://www.twitch.tv/atillabosma?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from AtillaBosma on www.twitch.tv</twitch>
 
 </body>
 </html>
