--- a/roflcopter/index.html
+++ b/roflcopter/index.html
@@ -17,6 +17,10 @@
   </style>
 </head>
 <body>
-<iframe width="420" height="315" src="https://www.youtube.com/embed/boh92DrYEWs" frameborder="0" allowfullscreen></iframe>
+<div style="text-align: center; margin: auto"><object type="application/x-shockwave-flash" style="width:420px; height:315px;" data="http://www.youtube.com/v/boh92DrYEWs?color2=FBE9EC&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;version=3&amp;modestbranding=1&amp;fs=1">
+        <param name="movie" value="http://www.youtube.com/v/boh92DrYEWs?color2=FBE9EC&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;version=3&amp;modestbranding=1&amp;fs=1" />
+        <param name="allowFullScreen" value="true" />
+        <param name="allowscriptaccess" value="always" />
+        </object><div style="font-size: 0.8em"><a href="http://www.tools4noobs.com/online_tools/youtube_xhtml/">Get your own valid XHTML YouTube embed code</a></div></div>
 </body>
 </html>
