--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="game/">Game</a></li>
+  <li><a href="roflcopter/">Roflcopter</a></li>
 </ul>
 <script src="scripts/twitterscript.js"></script>
 
