--- a/roflcopter/index.html
+++ b/roflcopter/index.html
@@ -17,10 +17,6 @@
   </style>
 </head>
 <body>
-<div style="text-align: center; margin: auto"><object type="application/x-shockwave-flash" style="width:420px; height:315px;" data="http://www.youtube.com/v/boh92DrYEWs?color2=FBE9EC&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;version=3&amp;modestbranding=1&amp;fs=1">
-        <param name="movie" value="http://www.youtube.com/v/boh92DrYEWs?color2=FBE9EC&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;version=3&amp;modestbranding=1&amp;fs=1" />
-        <param name="allowFullScreen" value="true" />
-        <param name="allowscriptaccess" value="always" />
-        </object><div style="font-size: 0.8em"><a href="http://www.tools4noobs.com/online_tools/youtube_xhtml/">Get your own valid XHTML YouTube embed code</a></div></div>
+<object width="1440" height="900"><param name="movie" value="http://www.youtube.com/v/boh92DrYEWs?modestbranding=1&amp;fs=0&amp;rel=0&amp;hd=1&amp;disablekb=0&amp;egm=1&amp;showsearch=0&amp;showinfo=0&amp;iv_load_policy=0&amp;autoplay=1&amp;loop=1&amp;version=3&amp;controls=0&amp;playlist=boh92DrYEWs"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/boh92DrYEWs?modestbranding=1&amp;fs=0&amp;rel=0&amp;hd=1&amp;disablekb=0&amp;egm=1&amp;showsearch=0&amp;showinfo=0&amp;iv_load_policy=0&amp;autoplay=1&amp;loop=1&amp;version=3&amp;controls=0&amp;playlist=boh92DrYEWs" type="application/x-shockwave-flash" allowscriptaccess="always" width="1440" height="900"></embed></object><!--Youtube player code generated @ http://gaf210.imvustylez.net -->
 </body>
 </html>
