--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <style>
+  body {
+    background-image: url("http://images2.fanpop.com/images/photos/4100000/J-zz-In-My-Pants-Caps-the-lonely-island-4133367-500-279.jpg?1366247183973");
+    background-repeat: repeat;
+  }
+  
   h1 {
     color: white;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
