--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <li><a href="#home">Home</a></li>
   <li><a href="game/">Game</a></li>
   <li><a href="roflcopter/">Rofl</a></li>
+  <li><a href="game2/">game2</a></li>
 </ul>
 <script src="scripts/twitterscript.js"></script>
 
