--- a/game2/index.html
+++ b/game2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>roflcopter</title>
+  <title>game2</title>
   <meta name="description" content="homepage">
   <meta name="author" content="AtillaBosma">
 
@@ -17,6 +17,10 @@
   </style>
 </head>
 <body>
-<object width="512" height="512" data="rpgtest.swf"></object>
+<object width="512" height="512">
+    <param name="movie" value="RPGTest.swf">
+    <embed src="RPGTest.swf" width="512" height="512">
+    </embed>
+</object>
 </body>
 </html>
