--- a/game2/index.html
+++ b/game2/index.html
@@ -17,10 +17,12 @@
   </style>
 </head>
 <body>
-<object width="1024" height="1024">
-    <param name="movie" value="RPGTest.swf">
-    <embed src="RPGTest.swf" width="1024" height="1024">
-    </embed>
+<div style="width:512px; height:512px; margin:0 auto;">
+<object width="512" height="512" >
+<param name="movie" value="RPGTest.swf">
+<embed src="RPGTest.swf" width="512" height="512">
+</embed>
 </object>
+</div>
 </body>
 </html>
