--- a/game3/index.html
+++ b/game3/index.html
@@ -17,6 +17,6 @@
   </style>
 </head>
 <body>
-  <script src="Scripts/Main.js"></script>
+  <script src="Scripts/main.js"></script>
 </body>
 </html>
