--- a/game3/index.html
+++ b/game3/index.html
@@ -17,6 +17,7 @@
   </style>
 </head>
 <body>
-  <script src="Scripts/main.js"></script>
+  <script type="text/javascript" src="Scripts/main.js"></script>
+  <test id="test">TEST</test>
 </body>
 </html>
