--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <li><a href="roflcopter/">Rofl</a></li>
   <li><a href="game2/">game2</a></li>
   <li><a href="game3/">game3</a></li>
+  <li><a href="chatroom/">chatroom</a></li>
 </ul>
 <script src="scripts/twitterscript.js"></script>
 
