--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
 </ul>
 <script src="scripts/twitterscript.js"></script>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62843258-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 <div id="reddit"><script src='//redditjs.com/subreddit.js' data-subreddit='leagueoflegends' data-width='500'></script></div>
 
 <div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
