--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -8,6 +8,7 @@
 	<greenGrid id="greenGrid" border="0"></greenGrid>
 	<textBox id="textBox" border="0"></textBox>
 	<dog id="dog" border="0"></dog>
+	<petbutton id="petbutton" border="0"></petbutton>
 	<audio autoplay="true" src="sounds/theme.mp3">
 <head>
   <script type="text/javascript" src="scripts/pettertale.js"></script>
@@ -30,6 +31,7 @@
 	z-index: 3;
 	letter-spacing: 3px;
 }
+
 .btext1 {
     font-family: battleFont;
 	font-size: 210%;
