you can press the button now
yay interactivity

--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -8,6 +8,7 @@
 	<greenGrid id="greenGrid" border="0"></greenGrid>
 	<textBox id="textBox" border="0"></textBox>
 	<dog id="dog" border="0"></dog>
+	<dogh id="dogh" border="0"></dogh>
 	<petbutton id="petbutton" border="0"></petbutton>
 	<audio autoplay="true" src="sounds/theme.mp3">
 <head>
