--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -11,6 +11,17 @@
 	<dogh id="dogh" border="0"></dogh>
 	<petbutton id="petbutton" border="0"></petbutton>
 	<audio autoplay="true" src="sounds/theme.mp3">
+	<div id="preload">
+		<img src="pics/dogh.png" width="1" height="1" alt="Doghead 0" />
+		<img src="pics/dogh1.png" width="1" height="1" alt="Doghead 1" />
+		<img src="pics/dogh2.png" width="1" height="1" alt="Doghead 2" />
+		<img src="pics/dogh3.png" width="1" height="1" alt="Doghead 3" />
+		<img src="pics/dogh4.png" width="1" height="1" alt="Doghead 4" />
+		<img src="pics/dog.png" width="1" height="1" alt="Dog" />
+		<img src="pics/battlebackground.png" width="1" height="1" alt="Green Grid" />
+		<img src="pics/textbox.png" width="1" height="1" alt="Text Box" />
+		<img src="pics/petbutton.png" width="1" height="1" alt="Pet Button" />
+	</div>
 <head>
   <script type="text/javascript" src="scripts/pettertale.js"></script>
   <style> 
@@ -46,6 +57,11 @@
 	z-index: 3;
 	letter-spacing: 3px;
 }
+
+div#preload { 
+	display: none; 
+}
+
 </style>
 </head>
 
