--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -17,6 +17,10 @@
 		<img src="pics/dogh2.png" width="1" height="1" alt="Doghead 2" />
 		<img src="pics/dogh3.png" width="1" height="1" alt="Doghead 3" />
 		<img src="pics/dogh4.png" width="1" height="1" alt="Doghead 4" />
+		<img src="pics/dogh5.png" width="1" height="1" alt="Doghead 5" />
+		<img src="pics/dogh6.png" width="1" height="1" alt="Doghead 6" />
+		<img src="pics/dogh7.png" width="1" height="1" alt="Doghead 7" />
+		<img src="pics/dogh8.png" width="1" height="1" alt="Doghead 8" />
 		<img src="pics/dog.png" width="1" height="1" alt="Dog" />
 		<img src="pics/battlebackground.png" width="1" height="1" alt="Green Grid" />
 		<img src="pics/textbox.png" width="1" height="1" alt="Text Box" />
