preload images update

--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -21,6 +21,11 @@
 		<img src="pics/dogh6.png" width="1" height="1" alt="Doghead 6" />
 		<img src="pics/dogh7.png" width="1" height="1" alt="Doghead 7" />
 		<img src="pics/dogh8.png" width="1" height="1" alt="Doghead 8" />
+		<img src="pics/dogh9.png" width="1" height="1" alt="Doghead 9" />
+		<img src="pics/dogh10.png" width="1" height="1" alt="Doghead 10" />
+		<img src="pics/dogh11.png" width="1" height="1" alt="Doghead 11" />
+		<img src="pics/dogh12.png" width="1" height="1" alt="Doghead 12" />
+		<img src="pics/dogh13.png" width="1" height="1" alt="Doghead 13" />
 		<img src="pics/dog.png" width="1" height="1" alt="Dog" />
 		<img src="pics/battlebackground.png" width="1" height="1" alt="Green Grid" />
 		<img src="pics/textbox.png" width="1" height="1" alt="Text Box" />
