--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -5,11 +5,21 @@
 <body style="background-color:black">
 	<div class="battleText">It's possible that you may have a problem.</div>
 	<div class="btext1">*</div>
+	<div class="name">FRISK</div>
+	<div class="level">LV 1</div>
+	<div class="smallhptext">HP</div>
+	<div class="currenthp">20</div>
+	<div class="maxhp">/  20</div>
 	<greenGrid id="greenGrid" border="0"></greenGrid>
+	<hpbar1 id="hpbar1" border="0"></hpbar1>
+	<hpbar2 id="hpbar2" border="0"></hpbar2>
 	<textBox id="textBox" border="0"></textBox>
 	<dog id="dog" border="0"></dog>
 	<dogh id="dogh" border="0"></dogh>
-	<petbutton id="petbutton" border="0"></petbutton>
+	<actbutton id="actbutton" border="0"></actbutton>
+	<itembutton id="itembutton" border="0"></itembutton>
+	<fightbutton id="fightbutton" border="0"></fightbutton>
+	<mercybutton id="mercybutton" border="0"></mercybutton>
 	<audio autoplay="true" src="sounds/theme.mp3">
 	<div id="preload">
 		<img src="pics/dogh.png" width="1" height="1" alt="Doghead 0" />
@@ -26,10 +36,18 @@
 		<img src="pics/dogh11.png" width="1" height="1" alt="Doghead 11" />
 		<img src="pics/dogh12.png" width="1" height="1" alt="Doghead 12" />
 		<img src="pics/dogh13.png" width="1" height="1" alt="Doghead 13" />
+		<img src="pics/dogh14.png" width="1" height="1" alt="Doghead 14" />
+		<img src="pics/dogh15.png" width="1" height="1" alt="Doghead 15" />
+		<img src="pics/dogh16.png" width="1" height="1" alt="Doghead 16" />
 		<img src="pics/dog.png" width="1" height="1" alt="Dog" />
 		<img src="pics/battlebackground.png" width="1" height="1" alt="Green Grid" />
 		<img src="pics/textbox.png" width="1" height="1" alt="Text Box" />
-		<img src="pics/petbutton.png" width="1" height="1" alt="Pet Button" />
+		<img src="pics/mercybutton.png" width="1" height="1" alt="Mercy Button" />
+		<img src="pics/fightbutton.png" width="1" height="1" alt="Fight Button" />
+		<img src="pics/outoforderbutton.png" width="1" height="1" alt="Out Of Order Button" />
+		<img src="pics/itembutton.png" width="1" height="1" alt="Item Button" />
+		<img src="pics/actbutton.png" width="1" height="1" alt="Act Button" />
+		<img src="pics/actbuttondown.png" width="1" height="1" alt="Act Button Down" />
 	</div>
 <head>
   <script type="text/javascript" src="scripts/pettertale.js"></script>
@@ -37,6 +55,11 @@
 @font-face {
     font-family: battleFont;
     src: url(8bitoperator.ttf);
+}
+
+@font-face {
+    font-family: MNC;
+    src: url(MNC.ttf);
 }
 
 .battleText {
@@ -65,6 +88,72 @@
     margin-top: -25px;
 	z-index: 3;
 	letter-spacing: 3px;
+}
+
+.name {
+    font-family: MNC;
+	font-size: 230%;
+	color: white;
+    position: absolute;
+    top: 86%;
+    left: 13%;
+	width: 600px;
+    margin-left: -50px;
+    margin-top: -25px;
+	z-index: 3;
+	letter-spacing: 3px;
+}
+.level {
+    font-family: MNC;
+	font-size: 230%;
+	color: white;
+    position: absolute;
+    top: 86%;
+    left: 26%;
+	width: 600px;
+    margin-left: -50px;
+    margin-top: -25px;
+	z-index: 3;
+	letter-spacing: 3px;
+}
+.currenthp {
+    font-family: MNC;
+	font-size: 230%;
+	color: white;
+    position: absolute;
+    top: 86%;
+    left: 53.5%;
+	width: 600px;
+    margin-left: -50px;
+    margin-top: -25px;
+	z-index: 3;
+	letter-spacing: 3px;
+}
+.maxhp {
+    font-family: MNC;
+	font-size: 230%;
+	color: white;
+    position: absolute;
+    top: 86%;
+    left: 58%;
+	width: 600px;
+    margin-left: -50px;
+    margin-top: -25px;
+	z-index: 3;
+	letter-spacing: 3px;
+}
+.smallhptext {
+    font-family: Arial Black;
+	font-size: 130%;
+	color: white;
+    position: absolute;
+    top: 86%;
+    left: 45%;
+	width: 50px;
+    margin-left: -50px;
+    margin-top: -25px;
+	z-index: 3;
+	letter-spacing: 2px;
 }
 
 div#preload { 
