--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -3,8 +3,8 @@
 <html>
 
 <body style="background-color:black">
-	<battletext id="battleText">It's possible that you may have a problem.</battletext>
-	<btext id="btext1">*</btext>
+	<battletext id="battleText">Lesser Dog appears.</battletext>
+	<btext1 id="btext1">*</btext1>
 	<playername id="playername">FRISK</playername>
 	<level id="level">LV 1</level>
 	<smallhptext id="smallhptext">HP</smallhptext>
@@ -20,35 +20,9 @@
 	<itembutton id="itembutton" border="0"></itembutton>
 	<fightbutton id="fightbutton" border="0"></fightbutton>
 	<mercybutton id="mercybutton" border="0"></mercybutton>
+	<menu1 id="menu1" border="0"></menu1>
+	<menu2 id="menu2" border="0"></menu2>
 	<audio autoplay="true" src="sounds/theme.mp3">
-	<div id="preload">
-		<img src="pics/dogh.png" width="1" height="1" alt="Doghead 0" />
-		<img src="pics/dogh1.png" width="1" height="1" alt="Doghead 1" />
-		<img src="pics/dogh2.png" width="1" height="1" alt="Doghead 2" />
-		<img src="pics/dogh3.png" width="1" height="1" alt="Doghead 3" />
-		<img src="pics/dogh4.png" width="1" height="1" alt="Doghead 4" />
-		<img src="pics/dogh5.png" width="1" height="1" alt="Doghead 5" />
-		<img src="pics/dogh6.png" width="1" height="1" alt="Doghead 6" />
-		<img src="pics/dogh7.png" width="1" height="1" alt="Doghead 7" />
-		<img src="pics/dogh8.png" width="1" height="1" alt="Doghead 8" />
-		<img src="pics/dogh9.png" width="1" height="1" alt="Doghead 9" />
-		<img src="pics/dogh10.png" width="1" height="1" alt="Doghead 10" />
-		<img src="pics/dogh11.png" width="1" height="1" alt="Doghead 11" />
-		<img src="pics/dogh12.png" width="1" height="1" alt="Doghead 12" />
-		<img src="pics/dogh13.png" width="1" height="1" alt="Doghead 13" />
-		<img src="pics/dogh14.png" width="1" height="1" alt="Doghead 14" />
-		<img src="pics/dogh15.png" width="1" height="1" alt="Doghead 15" />
-		<img src="pics/dogh16.png" width="1" height="1" alt="Doghead 16" />
-		<img src="pics/dog.png" width="1" height="1" alt="Dog" />
-		<img src="pics/battlebackground.png" width="1" height="1" alt="Green Grid" />
-		<img src="pics/textbox.png" width="1" height="1" alt="Text Box" />
-		<img src="pics/mercybutton.png" width="1" height="1" alt="Mercy Button" />
-		<img src="pics/fightbutton.png" width="1" height="1" alt="Fight Button" />
-		<img src="pics/outoforderbutton.png" width="1" height="1" alt="Out Of Order Button" />
-		<img src="pics/itembutton.png" width="1" height="1" alt="Item Button" />
-		<img src="pics/actbutton.png" width="1" height="1" alt="Act Button" />
-		<img src="pics/actbuttondown.png" width="1" height="1" alt="Act Button Down" />
-	</div>
 <head>
   <script type="text/javascript" src="scripts/pettertale.js"></script>
   <style> 
@@ -154,10 +128,6 @@ smallhptext {
     margin-top: -25px;
 	z-index: 3;
 	letter-spacing: 2px;
-}
-
-div#preload { 
-	display: none; 
 }
 
 </style>
