--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -22,7 +22,8 @@
 	<mercybutton id="mercybutton" border="0"></mercybutton>
 	<menu1 id="menu1" border="0"></menu1>
 	<menu2 id="menu2" border="0"></menu2>
-	<audio autoplay="true" src="sounds/theme.mp3">
+	<deathgif id="deathgif" border="0"></deathgif>
+	<audio id="theme" autoplay="true" src="sounds/theme.mp3">
 <head>
   <script type="text/javascript" src="scripts/pettertale.js"></script>
   <style> 
