wip fight screen
busy busy

--- a/pettertale/index.html
+++ b/pettertale/index.html
@@ -23,6 +23,8 @@
 	<menu1 id="menu1" border="0"></menu1>
 	<menu2 id="menu2" border="0"></menu2>
 	<deathgif id="deathgif" border="0"></deathgif>
+	<dFight id="dFight" border="0"></dFight>
+	<pFight id="pFight" border="0"></pFight>
 	<audio id="theme" autoplay="true" src="sounds/theme.mp3">
 <head>
   <script type="text/javascript" src="scripts/pettertale.js"></script>
