--- a/gabbiesucks/index.html
+++ b/gabbiesucks/index.html
@@ -17,7 +17,7 @@
 			document.body.appendChild( renderer.domElement );
 
 			var geometry = new THREE.BoxGeometry( 2, 2, 2 );
-			var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+			var material = new THREE.MeshPhongMaterial( { map: THREE.ImageUtils.loadTexture('gabbie.png') } );
 			var cube = new THREE.Mesh( geometry, material );
 			scene.add( cube );
 
