--- a/gabbiesucks/index.html
+++ b/gabbiesucks/index.html
@@ -9,30 +9,57 @@
 	<body>
 		<script src="three.min.js"></script>
 		<script>
-			var scene = new THREE.Scene();
-			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
-
-			var renderer = new THREE.WebGLRenderer();
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
-
-			var geometry = new THREE.BoxGeometry( 2, 2, 2 );
-			var material = new THREE.MeshPhongMaterial( { map: THREE.ImageUtils.loadTexture('gabbie.png') } );
-			var cube = new THREE.Mesh( geometry, material );
-			scene.add( cube );
-
-			camera.position.z = 5;
-
-			var render = function () {
-				requestAnimationFrame( render );
-
-				cube.rotation.x += 0.05;
-				cube.rotation.y += 0.05;
-
-				renderer.render(scene, camera);
-			};
-
-			render();
+			var camera;
+var scene;
+var renderer;
+var mesh;
+  
+init();
+animate();
+  
+function init() {
+  
+    scene = new THREE.Scene();
+    camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 1000);
+  
+    var light = new THREE.DirectionalLight( 0xffffff );
+    light.position.set( 0, 1, 1 ).normalize();
+    scene.add(light);
+  
+    var geometry = new THREE.CubeGeometry( 10, 10, 10);
+    var material = new THREE.MeshPhongMaterial( { map: THREE.ImageUtils.loadTexture('images/gabbie.jpg') } );
+  
+    mesh = new THREE.Mesh(geometry, material );
+    mesh.position.z = -50;
+    scene.add( mesh );
+  
+    renderer = new THREE.WebGLRenderer();
+    renderer.setSize( window.innerWidth, window.innerHeight );
+    document.body.appendChild( renderer.domElement );
+  
+    window.addEventListener( 'resize', onWindowResize, false );
+  
+    render();
+}
+  
+function animate() {
+    mesh.rotation.x += .04;
+    mesh.rotation.y += .02;
+  
+    render();
+    requestAnimationFrame( animate );
+}
+  
+function render() {
+    renderer.render( scene, camera );
+}
+  
+function onWindowResize() {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize( window.innerWidth, window.innerHeight );
+    render();
+}
 		</script>
 	</body>
 </html>
