--- a/gabbiesucks/index.html
+++ b/gabbiesucks/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>My first Three.js app</title>
+		<title>G A B B I E S U C K S</title>
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
