--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
 
-  <title>welcum to my site</title>
+  <title>Atilla Bosma</title>
   <meta name="description" content="homepage">
   <meta name="author" content="AtillaBosma">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <style>
-  body {
-    background-image: url("http://images2.fanpop.com/images/photos/4100000/J-zz-In-My-Pants-Caps-the-lonely-island-4133367-500-279.jpg?1366247183973");
-    background-repeat: repeat;
-  }
   
   h1 {
     color: white;
@@ -50,7 +43,7 @@
 </head>
 
 <body>
-<h1>Whalecum to my site lololo</h1>
+<h1>Atilla Bosma</h1>
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="game/">Game</a></li>
@@ -60,19 +53,6 @@
   <li><a href="chatroom/">chatroom</a></li>
 </ul>
 <script src="scripts/twitterscript.js"></script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-62843258-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<div id="reddit"><script src='//redditjs.com/subreddit.js' data-subreddit='leagueoflegends' data-width='500'></script></div>
 
 <div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
