Time to get rid of shit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="utf-8">
 
-      <title>Atilla Bosma</title>
+      <title>Atilla Bosma's Website</title>
 
       <meta name="description" content="homepage">
 
@@ -13,6 +13,11 @@
       <link rel="stylesheet" href="css/styles.css?v=1.0">
 
       <style>
+
+          body {
+            background-image: url(images/background.png);
+            background-repeat: repeat;
+          }
 
           h1 {
             color: white;
@@ -28,7 +33,6 @@
   
           li {
             float: left;
-            background-color: white;
           }
 
           a {
@@ -45,11 +49,7 @@
 
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="game/">Game</a></li>
-            <li><a href="roflcopter/">Rofl</a></li>
-            <li><a href="game2/">game2</a></li>
-            <li><a href="game3/">game3</a></li>
-            <li><a href="chatroom/">chatroom</a></li>
+            <li><a href="/pettertale">Pettertale</a></li>
         </ul>
 
         <script src="scripts/twitterscript.js"></script>
