--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
   
           #twitter {
             position: absolute;
-            top: 200px;
+            top: 21%;
+          }
+
+          #twitch {
+            position: absolute;
+            top: 21%;
+            left: 31.5%;
+          }
+          
+          #twitchchat {
+            position: absolute;
+            top: 61%;
+            left: 31.5%;
           }
   
           li {
@@ -52,6 +64,8 @@
             <li><a href="/pettertale">Pettertale</a></li>
         </ul>
 
+        <iframe id="twitch" src="https://player.twitch.tv/?channel=atillabosma" frameborder="0" scrolling="no" height="378" width="620"></iframe><a href="http://www.twitch.tv/atillabosma?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; position:absolute; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">.</a>
+        <iframe id="twitchchat" src="https://www.twitch.tv/atillabosma/chat?popout=" frameborder="0" scrolling="no" height="370" width="620"></iframe>
         <script src="scripts/twitterscript.js"></script>
 
         <div id="twitter"><a class="twitter-timeline" href="https://twitter.com/Atilla_Bosma" data-widget-id="587032631709163520">Tweets door @Atilla_Bosma</a>
