--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
           }
   
           #twitter {
-            position: absolute;
             top: 21%;
           }
 
           #twitch {
-            position: absolute;
+            position: static;
             top: 21%;
             left: 31.5%;
           }
           
           #twitchchat {
-            position: absolute;
+            position: static;
             top: 61%;
             left: 31.5%;
           }
