--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
           }
 
           #twitch {
-            position: static;
+            position: absolute;
             top: 21%;
             left: 31.5%;
           }
           
           #twitchchat {
-            position: static;
+            position: absolute;
             top: 61%;
             left: 31.5%;
           }
