--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><a href="/pettertale">Pettertale</a></li>
         </ul>
 
-        <iframe id="twitch" src="https://player.twitch.tv/?channel=atillabosma" frameborder="0" scrolling="no" height="378" width="620"></iframe><a href="http://www.twitch.tv/atillabosma?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; position:absolute; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">.</a>
+        <iframe id="twitch" src="https://player.twitch.tv/?channel=atillabosma" frameborder="0" scrolling="no" height="378" width="620"></iframe>
         <iframe id="twitchchat" src="https://www.twitch.tv/atillabosma/chat?popout=" frameborder="0" scrolling="no" height="370" width="620"></iframe>
         <script src="scripts/twitterscript.js"></script>
 
